MessagingInput text will no longer overlap button in mobile UI. Also, corrections to MessagingThreadHistory message padding (vertical) to bring it closer to mobile mocks.

--- a/src/MessagingThreadHistory/MessageMetadata.less
+++ b/src/MessagingThreadHistory/MessageMetadata.less
@@ -46,11 +46,15 @@
 
 // For mobile/tablet
 @media only screen and (max-width: @breakpointM) {
+  .MessageMetadata--Message--center {
+    .margin--y--m();
+  }
+
   .MessageMetadata--Message--right {
-    .margin--y--xs();
+    .margin--y--2xs();
   }
 
   .MessageMetadata--Message--left {
-    .margin--y--xs();
+    .margin--y--2xs();
   }
 }
